<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <!-- Player avatar cartoon images from graphicmama.com,
        metallic background on podium is from pngfree.com -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Game Background Pattern Portrait Mode -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_background"
            android:scaleType="centerCrop"
            android:src="@drawable/greedosity_background" />

        <!--Game Logo Portrait Mode -->
        <ImageView
            android:id="@+id/greedosity_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/game_logo_portrait_height"
            android:layout_marginBottom="@dimen/game_logo_portrait_marginBottom"
            android:layout_marginTop="@dimen/game_logo_portrait_marginTop"
            android:contentDescription="@string/app_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/greedosity_logo"
            android:visibility="visible" />

        <!--Game Status Bar Portrait Mode  -->
        <TextView
            android:id="@+id/game_status_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/greedosity_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/game_status_bar_portrait_marginBottom"
            android:background="@color/blackBackground"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/game_status_bar_portrait_paddingBottom"
            android:paddingTop="@dimen/game_status_bar_portrait_paddingTop"
            android:text=""
            android:textColor="@color/scoreColor"
            android:textSize="@dimen/game_status_bar_text_size"
            android:visibility="visible" />

        <!--Game Reset Button Portrait Mode -->
        <Button
            android:id="@+id/reset_game_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/game_reset_btn_portrait_height"
            android:layout_below="@id/game_status_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/game_reset_btn_portrait_marginTop"
            android:background="@color/resetButton"
            android:gravity="center"
            android:onClick="resetGameScore"
            android:padding="@dimen/game_reset_btn_portrait_padding"
            android:text="@string/ResetButtonText"
            android:textColor="@color/primaryTextColor2"
            android:textSize="@dimen/game_reset_btn_text_size" />

        <!--Linear Layout View showing the players Portrait Mode -->
        <LinearLayout
            android:id="@+id/myLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <!--Linear Layout showing Player 1 Portrait Mode -->
            <LinearLayout style="@style/player_linear_layout">

                <ImageView
                    style="@style/avatar_style"
                    android:contentDescription="@string/PlayerOneAvatarDescription"
                    android:src="@drawable/suzy_avatar" />

                <TextView
                    style="@style/PlayerNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PlayerOneName" />

                <TextView
                    android:id="@+id/suzy_earnings"
                    style="@style/PlayerEarningsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/suzyTotal" />

                <LinearLayout style="@style/podium_style">

                    <Button
                        style="@style/buttonStyles"
                        android:onClick="addTenDollarsSuzy"
                        android:text="@string/Button1Text" />

                    <Button
                        style="@style/buttonStyles"
                        android:onClick="addFiftyDollarsSuzy"
                        android:text="@string/Button2Text" />

                    <Button
                        style="@style/buttonStyles"
                        android:onClick="surpriseSuzy"
                        android:text="@string/Button3Text" />
                </LinearLayout>
            </LinearLayout>

            <!--Linear Layout showing Player 2 Portrait Mode -->
            <LinearLayout style="@style/player_linear_layout">

                <ImageView
                    style="@style/avatar_style"
                    android:contentDescription="@string/PlayerTwoAvatarDescription"
                    android:src="@drawable/mike_avatar" />

                <TextView
                    style="@style/PlayerNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PlayerTwoName" />

                <TextView
                    android:id="@+id/mike_earnings"
                    style="@style/PlayerEarningsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mikeTotal" />

                <LinearLayout style="@style/podium_style">

                    <Button
                        style="@style/buttonStyles"
                        android:onClick="addTenDollarsMike"
                        android:text="@string/Button1Text" />

                    <Button
                        style="@style/buttonStyles"
                        android:onClick="addFiftyDollarsMike"
                        android:text="@string/Button2Text" />

                    <Button
                        style="@style/buttonStyles"
                        android:onClick="surpriseMike"
                        android:text="@string/Button3Text" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>